--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Iyasocare Blog</title>
+<title>Iyasocare</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 <div class="container">
 <ul id="articles" class="article-list">
-<li><a href="articles/iyasocare-wheelchair.html">Iyasocare: A Trusted International Wheelchair Supplier</a><span class="date">2025-09-29</span><p class="summary">In today’s rapidly changing world, mobility is no longer a luxury...</p></li>
+<li><a href="articles/iyasocare-wheelchair.html">Iyasocare | International Wheelchair Supplier</a><span class="date">2025-09-29</span><p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p></li>
 </ul>
 
 <div class="pagination">
