--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-<h1>Iyasocare Blog</h1>
+<h1><a href="https://www.iyasomed.com" target="_blank">Iyasocare</a></h1>
 <nav>
 <a href="index.html">Home</a>
 <a href="#articles">Articles</a>
