--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <h1><a href="https://www.iyasomed.com" target="_blank">Iyasocare</a></h1>
 <nav>
 <a href="index.html">Home</a>
-<a href="#articles">Articles</a>
-<a href="#contact">Contact</a>
+<a href="hhttps://www.iyasomed.com/products/">products</a>
+<a href="https://www.iyasomed.com/about-us/">About Us</a>
+<a href="https://www.iyasomed.com/services/">services</a>
+<a href="https://www.iyasomed.com/contact/">Contact Us</a>
 </nav>
 </header>
 
