--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Iyasocare</title>
+<title>Wheelchair Manufacturer, Factory & Wholesale Supplier | Reliable Mobility Solutions Exporter - Iyasocare</title>
+<meta name="description" content="Iyasocare is a trusted wheelchair manufacturer and wholesale supplier, offering high-quality manual and electric wheelchairs with global export service.">
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
