--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Wheelchair Manufacturer, Factory & Wholesale Supplier | Reliable Mobility Solutions Exporter - Iyasocare</title>
 <meta name="description" content="Iyasocare is a trusted wheelchair manufacturer and wholesale supplier, offering high-quality manual and electric wheelchairs with global export service.">
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="icon" type="image/x-icon" href="https://iyasomed.github.io/img/favicon.png">
 </head>
 <body>
 <header>
