--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 <h1><a href="https://www.iyasomed.com" target="_blank" style="color: white; text-decoration: none;">Iyasocare</a></h1>
 <nav>
-<a href="index.html">Home</a>
+<a href="https://iyasomed.github.io">Home</a>
 <a href="https://www.iyasomed.com/products/">products</a>
 <a href="https://www.iyasomed.com/about-us/">About Us</a>
 <a href="https://www.iyasomed.com/services/">services</a>
