--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,32 +6,43 @@
 <title>Wheelchair Manufacturer, Factory & Wholesale Supplier | Reliable Mobility Solutions Exporter - Iyasocare</title>
 <meta name="description" content="Iyasocare is a trusted wheelchair manufacturer and wholesale supplier, offering high-quality manual and electric wheelchairs with global export service.">
 <link rel="stylesheet" href="assets/css/style.css">
-<link rel="icon" type="image/x-icon" href="https://iyasomed.github.io/img/favicon.png">
+<link rel="icon" type="image/png" href="https://iyasomed.github.io/img/favicon.png">
 </head>
 <body>
 <header>
-<h1><a href="https://www.iyasomed.com" target="_blank" style="color: white; text-decoration: none;">Iyasocare</a></h1>
-<nav>
-<a href="https://iyasomed.github.io">Home</a>
-<a href="https://www.iyasomed.com/products/">products</a>
-<a href="https://www.iyasomed.com/about-us/">About Us</a>
-<a href="https://www.iyasomed.com/services/">services</a>
-<a href="https://www.iyasomed.com/contact/">Contact Us</a>
-</nav>
+  <h1><a href="https://www.iyasomed.com" target="_blank" style="color: white; text-decoration: none;">Iyasocare</a></h1>
+  
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="https://www.iyasomed.com/products/">Products</a></li>
+      <li><a href="https://www.iyasomed.com/about-us/">About Us</a></li>
+      <li><a href="https://www.iyasomed.com/services/">Services</a></li>
+      <li><a href="https://www.iyasomed.com/contact/">Contact Us</a></li>
+    </ul>
+  </nav>
 </header>
 
 <div class="container">
-<ul id="articles" class="article-list">
-<li><a href="articles/iyasocare-wheelchair.html">Iyasocare | International Wheelchair Supplier</a><span class="date">2025-09-29</span><p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p></li>
-</ul>
+  <ul id="articles" class="article-list">
+    <li>
+      <a href="articles/iyasocare-wheelchair.html">Iyasocare | International Wheelchair Supplier</a>
+      <span class="date">2025-09-29</span>
+      <p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p>
+    </li>
+  </ul>
 
-<div class="pagination">
-<strong>1</strong> <a href="index2.html">2</a> <a href="index3.html">3</a>
-</div>
+  <div class="pagination">
+    <strong>1</strong> <a href="index2.html">2</a> <a href="index3.html">3</a>
+  </div>
 </div>
 
 <div id="backToTop" onclick="window.scrollTo({ top:0, behavior:'smooth' });">&#8679;</div>
-<footer>&copy; 2025 Chongqing Iyasocare Medical Co., Ltd. All rights reserved.</footer>
+
+<footer>
+  <p>&copy; 2025 Chongqing Iyasocare Medical Co., Ltd. All rights reserved.</p>
+</footer>
+
 <script src="assets/js/script.js"></script>
 </body>
 </html>
