--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="https://iyasomed.github.io/">Home</a></li>
       <li><a href="https://www.iyasomed.com/products/">Products</a></li>
       <li><a href="https://www.iyasomed.com/about-us/">About Us</a></li>
       <li><a href="https://www.iyasomed.com/services/">Services</a></li>
