--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <h1><a href="https://www.iyasomed.com" target="_blank" style="color: white; text-decoration: none;">Iyasocare</a></h1>
   
   <nav>
-    <ul>
-      <li><a href="https://iyasomed.github.io/">Home</a></li>
-      <li><a href="https://www.iyasomed.com/products/">Products</a></li>
-      <li><a href="https://www.iyasomed.com/about-us/">About Us</a></li>
-      <li><a href="https://www.iyasomed.com/services/">Services</a></li>
-      <li><a href="https://www.iyasomed.com/contact/">Contact Us</a></li>
-    </ul>
+      <a href="https://iyasomed.github.io/">Home</a>
+      <a href="https://www.iyasomed.com/products/">Products</a>
+      <a href="https://www.iyasomed.com/about-us/">About Us</a>
+      <a href="https://www.iyasomed.com/services/">Services</a>
+      <a href="https://www.iyasomed.com/contact/">Contact Us</a>
   </nav>
 </header>
 
