--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       <span class="date">2025-09-29</span>
       <p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p>
     </li>
+      <li>
+      <a href="articles/Walker-Wheelchair.html">Walker vs Wheelchair - Which One Do You Need?</a>
+      <span class="date">2025-09-30</span>
+      <p class="summary">Among the most common options are walkers and wheelchairs, including electric wheelchairs and motorized wheelchairs. Both assist users in maintaining independence, safety, and comfort, but they serve different needs. </p>
+    </li>
   </ul>
 
   <div class="pagination">
