--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       <span class="date">2025-09-30</span>
       <p class="summary">Among the most common options are walkers and wheelchairs, including electric wheelchairs and motorized wheelchairs. Both assist users in maintaining independence, safety, and comfort, but they serve different needs. </p>
     </li>
+     <li>
+      <a href="articles/wheelchair-elevator-guide.html">What Is the Best Way to Move a Wheelchair onto an Elevator?</a>
+      <span class="date">2025-09-30</span>
+      <p class="summary">Learn the safest way to move a wheelchair onto an elevator. Explore professional tips, electric and manual wheelchair guidance, and how Iyasocare wheelchairs ensure comfort, stability, and independence in public spaces. </p>
+    </li>
   </ul>
 
   <div class="pagination">
