--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
       <span class="date">2025-09-30</span>
       <p class="summary">Learn the safest way to move a wheelchair onto an elevator. Explore professional tips, electric and manual wheelchair guidance, and how Iyasocare wheelchairs ensure comfort, stability, and independence in public spaces. </p>
     </li>
+      <li>
+      <a href="articles/wheelchair-elevator-guide.html">How to Adjust Your Wheelchair to Fit Your Body</a>
+      <span class="date">2025-10-09</span>
+      <p class="summary">Learn how to adjust your wheelchair for maximum comfort, posture, and mobility. This complete Iyasocare guide covers seat height, backrest, footrest, and cushion adjustments to ensure your wheelchair fits your body perfectly for long-term use </p>
+    </li>
+     <li>
+      <a href="articles/wheelchair-elevator-guide.html">Wheelchair Manufacturer Wholesale | High-Quality Manual & Electric Wheelchairs</a>
+      <span class="date">2025-10-09</span>
+      <p class="summary">Looking for a reliable wheelchair wholesale supplier? Iyasocare offers high-quality manual and electric wheelchairs, as well as customizable solutions for distributors, hospitals, and rehabilitation centers worldwide, ensuring safety, comfort, and durability. </p>
+    </li>
   </ul>
 
   <div class="pagination">
