--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
-      <a href="articles/iyasocare-wheelchair.html">Iyasocare | International Wheelchair Supplier</a>
-      <span class="date">2025-09-29</span>
-      <p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p>
+      <a href="articles/wholesale-wheelchair-factory.html">Wholesale Wheelchair Factory: High-Quality Manual & Electric Wheelchairs by Iyasocare</a>
+      <span class="date">2025-10-15</span>
+      <p class="summary">Discover premium wheelchairs at wholesale prices from Iyasocare. Explore durable manual and electric models, customizable options, and reliable international shipping for healthcare providers and distributors worldwide. </p>
     </li>
-      <li>
+     <li>
+      <a href="articles/wheelchair-elevator-guide.html">Wheelchair Manufacturer Wholesale | High-Quality Manual & Electric Wheelchairs</a>
+      <span class="date">2025-10-09</span>
+      <p class="summary">Looking for a reliable wheelchair wholesale supplier? Iyasocare offers high-quality manual and electric wheelchairs, as well as customizable solutions for distributors, hospitals, and rehabilitation centers worldwide, ensuring safety, comfort, and durability. </p>
+    </li>
+    <li>
+      <a href="articles/wheelchair-elevator-guide.html">How to Adjust Your Wheelchair to Fit Your Body</a>
+      <span class="date">2025-10-09</span>
+      <p class="summary">Learn how to adjust your wheelchair for maximum comfort, posture, and mobility. This complete Iyasocare guide covers seat height, backrest, footrest, and cushion adjustments to ensure your wheelchair fits your body perfectly for long-term use </p>
+    </li>
+    <li>
       <a href="articles/Walker-Wheelchair.html">Walker vs Wheelchair - Which One Do You Need?</a>
       <span class="date">2025-09-30</span>
       <p class="summary">Among the most common options are walkers and wheelchairs, including electric wheelchairs and motorized wheelchairs. Both assist users in maintaining independence, safety, and comfort, but they serve different needs. </p>
@@ -37,15 +47,10 @@
       <span class="date">2025-09-30</span>
       <p class="summary">Learn the safest way to move a wheelchair onto an elevator. Explore professional tips, electric and manual wheelchair guidance, and how Iyasocare wheelchairs ensure comfort, stability, and independence in public spaces. </p>
     </li>
-      <li>
-      <a href="articles/wheelchair-elevator-guide.html">How to Adjust Your Wheelchair to Fit Your Body</a>
-      <span class="date">2025-10-09</span>
-      <p class="summary">Learn how to adjust your wheelchair for maximum comfort, posture, and mobility. This complete Iyasocare guide covers seat height, backrest, footrest, and cushion adjustments to ensure your wheelchair fits your body perfectly for long-term use </p>
-    </li>
-     <li>
-      <a href="articles/wheelchair-elevator-guide.html">Wheelchair Manufacturer Wholesale | High-Quality Manual & Electric Wheelchairs</a>
-      <span class="date">2025-10-09</span>
-      <p class="summary">Looking for a reliable wheelchair wholesale supplier? Iyasocare offers high-quality manual and electric wheelchairs, as well as customizable solutions for distributors, hospitals, and rehabilitation centers worldwide, ensuring safety, comfort, and durability. </p>
+    <li>
+      <a href="articles/iyasocare-wheelchair.html">Iyasocare | International Wheelchair Supplier</a>
+      <span class="date">2025-09-29</span>
+      <p class="summary">Iyasocare is a trusted international wheelchair supplier offering electric wheelchairs, manual wheelchairs, children wheelchairs, stair climbing wheelchairs, standing wheelchairs, and more.</p>
     </li>
   </ul>
 
