--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/wholesale-wheelchair-factory.html">How to Find a Reliable Wheelchair Manufacturer</a>
+      <span class="date">2025-10-15</span>
+      <p class="summary">Looking for a dependable wheelchair manufacturer? Learn how to evaluate quality, customization, compliance, and after-sales service. Discover durable manual and electric wheelchairs from trusted brands like Iyasocare for healthcare providers, distributors, and individual users worldwide.</p>
+    </li>
+    <li>
       <a href="articles/wholesale-wheelchair-factory.html">Wholesale Wheelchair Factory: High-Quality Manual & Electric Wheelchairs by Iyasocare</a>
       <span class="date">2025-10-15</span>
       <p class="summary">Discover premium wheelchairs at wholesale prices from Iyasocare. Explore durable manual and electric models, customizable options, and reliable international shipping for healthcare providers and distributors worldwide. </p>
