--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/leading-folding-wheelchair-brands-manufacturers.html">Leading Folding Wheelchair Brands and Manufacturers</a>
+      <span class="date">2025-10-17</span>
+      <p class="summary">Discover the leading folding wheelchair brands of 2025. Compare Invacare, Quickie, Küschall, Drive Medical, and the rising innovator Iyasocare.</p>
+    </li>
+    <li>
+    <li>
       <a href="articles/how-to-find-a-reliable-wheelchair-manufacturer.html">How to Find a Reliable Wheelchair Manufacturer</a>
       <span class="date">2025-10-15</span>
       <p class="summary">Looking for a dependable wheelchair manufacturer? Learn how to evaluate quality, customization, compliance, and after-sales service. Discover durable manual and electric wheelchairs from trusted brands like Iyasocare for healthcare providers, distributors, and individual users worldwide.</p>
