--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+     <li>
+      <a href="articles/recommended-manual-wheelchair-suppliers.html">Recommended Manual Wheelchair Suppliers — A Complete Global Buying Guide</a>
+      <span class="date">2025-10-17</span>
+      <p class="summary">manual wheelchair suppliers worldwide, including Iyasocare. Find lightweight, active, pediatric, and durable wheelchairs with expert guidance and warranty support.</p>
+    </li>
     <li>
       <a href="articles/leading-folding-wheelchair-brands-manufacturers.html">Leading Folding Wheelchair Brands and Manufacturers</a>
       <span class="date">2025-10-17</span>
