--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+    <li>
+      <a href="articles/global-wheelchair-parts-distributor-guide.html">Global Wheelchair Parts Distributor Guide: Building a Reliable Supply Chain with Iyasocare</a>
+      <span class="date">2025-10-28</span>
+      <p class="summary">Discover the essentials of building a reliable wheelchair parts supply chain. Learn how to choose the right distributor, ensure parts compatibility, and leverage global brands like Iyasocare for superior mobility solutions. Enhance your business operations and improve user care with expert insights.</p>
+    </li>
+    <li>
+      <a href="articles/wheelchair-accessories.html">The Comprehensive Guide to Wheelchair Accessories: Enhancing Mobility and Comfort with</a>
+      <span class="date">2025-10-28</span>
+      <p class="summary">Explore the essential wheelchair accessories that enhance comfort, mobility, and safety for users. From cushions and footrests to storage solutions and weather protection, learn how to make the most of your wheelchair with premium accessories. Discover why Iyasocare stands out as a trusted distributor, offering high-quality, innovative products for wheelchair users worldwide.</p>
+    </li>
      <li>
       <a href="articles/recommended-manual-wheelchair-suppliers.html">Recommended Manual Wheelchair Suppliers — A Complete Global Buying Guide</a>
       <span class="date">2025-10-17</span>
