--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+  <li>
+      <a href="articles/lightweight-wheelchairs-guide-iyasocare.html">Lightweight Wheelchairs Freedom, Comfort, and Independence</a>
+      <span class="date">2025-11-10</span>
+      <p class="summary">lightweight wheelchairs combine smart engineering with human-centered design. They make it easier for users and caregivers alike to move seamlessly between home, work, and travel—without compromising safety or comfort.</p>
+    </li>
+    <li>
+      <a href="articles/Foldable-Electric-Wheelchairs-and-How-to-Choose-Right.html">Folding Electric Wheelchairs for a More Independent Life</a>
+      <span class="date">2025-11-10</span>
+      <p class="summary">folding electric wheelchairs have quietly revolutionized this experience. Compact, portable, and powered by modern lithium batteries, they have redefined what it means to stay active and travel without limits.</p>
+    </li>
     <li>
       <a href="articles/global-wheelchair-parts-distributor-guide.html">Global Wheelchair Parts Distributor Guide: Building a Reliable Supply Chain with Iyasocare</a>
       <span class="date">2025-10-28</span>
