--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+      <li>
+      <a href="articles/Best-Portable-Mobility-Scooters-for-Travel-Daily-Use.html">Best Portable Mobility Scooters for Travel & Daily Use</a>
+      <span class="date">2025-11-26</span>
+      <p class="summary">Portable mobility scooters have quietly reshaped how people move through the world. What began as a niche assistive technology has evolved into a practical everyday tool—equally valuable for seniors who want independence</p>
+    </li>
+      <li>
+      <a href="articles/Medical-Wheelchairs-Lightweight-and-Carbon-Steel Models-for-Everyday-Mobility.html">Medical Wheelchairs Lightweight, and Carbon Steel Models for Everyday Mobility</a>
+      <span class="date">2025-11-26</span>
+      <p class="summary">Modern mobility care is evolving rapidly, and one device remains at the center of it all: the medical wheelchair. But a wheelchair is no longer just a chair with wheels. For millions of people worldwide, it represents independence, dignity, safety, and the ability to fully participate in everyday life.</p>
+    </li>
+      <li>
+      <a href="articles/The-Complete-Guide-to-Electric-Medical-Scooters-Portable-Lightweight-Folding-Mobility-Solutions.html">The Complete Guide to Electric Medical Scooters Portable, Lightweight & Folding Mobility Solutions</a>
+      <span class="date">2025-11-26</span>
+      <p class="summary">Electric medical scooters have quietly transformed daily life for millions of people worldwide. What was once viewed as a niche mobility device has evolved into a highly engineered, stylish, and customizable piece of personal transportation.</p>
+    </li>
   <li>
       <a href="articles/lightweight-wheelchairs-guide-iyasocare.html">Lightweight Wheelchairs Freedom, Comfort, and Independence</a>
       <span class="date">2025-11-10</span>
