Add article on standing electric wheelchairs
Added a new article about standing electric wheelchairs.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
       <li>
+      <a href="articles/standing-electric-wheelchairs-benefits-user-experience.html">Standing Electric Wheelchairs Redefining Mobility and Independence</a>
+      <span class="date">2025-11-26</span>
+      <p class="summary">Mobility is more than just movement. It is freedom, confidence, and the ability to engage fully with the world. For individuals with mobility impairments, technology has long been a key enabler, and among the most transformative innovations is the standing electric wheelchair. </p>
+    </li>
+      <li>
       <a href="articles/Best-Portable-Mobility-Scooters-for-Travel-Daily-Use.html">Best Portable Mobility Scooters for Travel & Daily Use</a>
       <span class="date">2025-11-26</span>
       <p class="summary">Portable mobility scooters have quietly reshaped how people move through the world. What began as a niche assistive technology has evolved into a practical everyday tool—equally valuable for seniors who want independence</p>
