--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+     <li>
+      <a href="articles/Why-Lightweight-Folding-Wheelchairs-Matter.html">Why Lightweight Folding Wheelchairs Matter - Iyasocare</a>
+      <span class="date">2025-12-08</span>
+      <p class="summary">Mobility matters — and for many people, the difference between a heavy, clunky wheelchair and a lightweight, folding model can mean the difference between freedom and frustration. A good lightweight folding wheelchair offers portability, ease of use, comfort, and flexibility — qualities that make daily living, travel, and independence far more manageable. These wheelchairs are designed to help users maintain an active lifestyle, reduce physical strain, and improve confidence in daily activities. </p>
+    </li>
       <li>
       <a href="articles/standing-electric-wheelchairs-benefits-user-experience.html">Standing Electric Wheelchairs Redefining Mobility and Independence</a>
       <span class="date">2025-12-03</span>
