--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+    <li>
+      <a href="articles/Manual-Beach-Wheelchair-Guide.html">Why Lightweight Folding Wheelchairs Matter - Iyasocare</a>
+      <span class="date">2025-12-15</span>
+      <p class="summary">A manual beach wheelchair is more than a mobility aid — it represents independence, shared experiences, and the freedom to enjoy nature. This guide explains what makes manual beach wheelchairs unique, why standard wheelchairs fall short on sand, and introduces two specialized models from IYASOCARE: the Folding Beach Wheelchair YSB01 and the Stainless Steel Folding Floating Beach Wheelchair YSB02.</p>
+    </li>
      <li>
       <a href="articles/Why-Lightweight-Folding-Wheelchairs-Matter.html">Why Lightweight Folding Wheelchairs Matter - Iyasocare</a>
       <span class="date">2025-12-08</span>
