--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
-      <a href="articles/Manual-Beach-Wheelchair-Guide.html">Why Lightweight Folding Wheelchairs Matter - Iyasocare</a>
+      <a href="articles/Manual-Beach-Wheelchair-Guide.html">Manual Beach Wheelchair Guide: How to Choose the Best All-Terrain Mobility Solution for Sand & Shore</a>
       <span class="date">2025-12-15</span>
       <p class="summary">A manual beach wheelchair is more than a mobility aid — it represents independence, shared experiences, and the freedom to enjoy nature. This guide explains what makes manual beach wheelchairs unique, why standard wheelchairs fall short on sand, and introduces two specialized models from IYASOCARE: the Folding Beach Wheelchair YSB01 and the Stainless Steel Folding Floating Beach Wheelchair YSB02.</p>
     </li>
