--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+     <li>
+      <a href="articles/Complete-Guide-to-the-High-Back-Tilt-Wheelchair.html">Complete Guide to the High Back Tilt Wheelchair</a>
+      <span class="date">2025-12-15</span>
+      <p class="summary">the High-back foldable electric wheelchair YSE109 from Iyasocare. We’ll unpack its features, strengths, real-world applications, and how it compares to broader wheelchair trends, ensuring you have a complete understanding of why these mobility aids are transforming lives.</p>
+    </li>
     <li>
       <a href="articles/Manual-Beach-Wheelchair-Guide.html">Manual Beach Wheelchair Guide: How to Choose the Best All-Terrain Mobility Solution for Sand & Shore</a>
       <span class="date">2025-12-15</span>
