--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
      <li>
+      <a href="articles/Rehabilitation-Standing-Wheelchairs.html">Rehabilitation Standing Wheelchairs - Iyasocare</a>
+      <span class="date">2025-12-31</span>
+      <p class="summary">Among the most transformative innovations in this space is the rehabilitation standing wheelchair—a device that does not merely assist users in getting around, but actively supports physical health, functional independence, and social engagement.</p>
+    </li>
+     <li>
       <a href="articles/Complete-Guide-to-the-High-Back-Tilt-Wheelchair.html">Complete Guide to the High Back Tilt Wheelchair</a>
       <span class="date">2025-12-16</span>
       <p class="summary">the High-back foldable electric wheelchair YSE109 from Iyasocare. We’ll unpack its features, strengths, real-world applications, and how it compares to broader wheelchair trends, ensuring you have a complete understanding of why these mobility aids are transforming lives.</p>
