--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+    <li>
+      <a href="articles/Medica-Wheelchairs-with-Safety-Brakes.html">Medical Wheelchairs with Safety Brakes - Iyasocare</a>
+      <span class="date">2026-01-05</span>
+      <p class="summary">the right wheelchair can transform daily life: enabling travel, social engagement, self‑care, and participation in work, family, and leisure. Among the wide range of wheelchairs available today, medical wheelchairs with safety brakes represent a smart balance between comfort, performance, safety, and user confidence.</p>
+    </li>
+    <li>
+      <a href="articles/Lightweight-Wheelchairs-for-Nursing-Homes.html">Lightweight Wheelchairs for Nursing Homes - Iyasocare</a>
+      <span class="date">2026-01-05</span>
+      <p class="summary">lightweight wheelchairs have emerged as a preferred choice for nursing homes worldwide, offering an optimal combination of mobility, ease of use, and long-term durability.</p>
+    </li>
      <li>
       <a href="articles/Rehabilitation-Standing-Wheelchairs.html">Rehabilitation Standing Wheelchairs - Iyasocare</a>
       <span class="date">2025-12-31</span>
