Add article for Height-Adjustable Folding Wheelchair

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+   <li>
+      <a href="articles/Height-Adjustable-Folding-Electric-Wheelchair-YSE314.html">Height-Adjustable Folding Electric Wheelchair YSE314 | Comfort, Portability, and Independence - Iyasocare</a>
+      <span class="date">2026-01-16</span>
+      <p class="summary">The YSE314 Height-Adjustable Folding Electric Wheelchair combines advanced technology, comfort, and portability to help users regain freedom of movement. In this guide, we’ll explore its key features, real-life use cases, target users, comparisons, and buying tips.</p>
+    </li>
     <li>
       <a href="articles/Medica-Wheelchairs-with-Safety-Brakes.html">Medical Wheelchairs with Safety Brakes - Iyasocare</a>
       <span class="date">2026-01-05</span>
