Add article listing for China Electric Wheelchair 2026

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 
 <div class="container">
   <ul id="articles" class="article-list">
+    <li>
+      <a href="articles/China-2026-Electric-Wheelchair-Manufacturers-Ranking.html">China Leading Role in Electric Wheelchair Manufacturing in 2026 - Iyasocare</a>
+      <span class="date">2026-01-16</span>
+      <p class="summary">This article goes beyond a simple list: it maps out leading manufacturers in 2026, profiles their strengths, and offers practical insights for global buyers and partners.</p>
+    </li>
    <li>
       <a href="articles/Height-Adjustable-Folding-Electric-Wheelchair-YSE314.html">Height-Adjustable Folding Electric Wheelchair YSE314 | Comfort, Portability, and Independence - Iyasocare</a>
       <span class="date">2026-01-16</span>
