--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/YSE111-Portable-Lightweight-Electric-Wheelchair.html">YSE111 Portable Lightweight Electric Wheelchair - Iyasocare</a>
+      <span class="date">2026-01-16</span>
+      <p class="summary">The YSE111 Portable Lightweight Electric Wheelchair is designed to give you all that and more, combining innovative design with practical functionality.</p>
+    </li>
+   <li>
+    <li>
       <a href="articles/China-2026-Electric-Wheelchair-Manufacturers-Ranking.html">China Leading Role in Electric Wheelchair Manufacturing in 2026 - Iyasocare</a>
       <span class="date">2026-01-16</span>
       <p class="summary">This article goes beyond a simple list: it maps out leading manufacturers in 2026, profiles their strengths, and offers practical insights for global buyers and partners.</p>
