Add article link and summary for YSE148 wheelchair

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/Electric-Reclining-Wheelchair-YSE148.html">Electric Reclining Wheelchair YSE148 - Iyasocare</a>
+      <span class="date">2026-01-23</span>
+      <p class="summary">he YSE148 Electric Reclining Wheelchair is designed with both comfort and practicality in mind, offering a wide range of features that make life easier, whether you're at home or on the go.</p>
+    </li>
+    <li>
       <a href="articles/YSE111-Portable-Lightweight-Electric-Wheelchair.html">YSE111 Portable Lightweight Electric Wheelchair - Iyasocare</a>
       <span class="date">2026-01-22</span>
       <p class="summary">The YSE111 Portable Lightweight Electric Wheelchair is designed to give you all that and more, combining innovative design with practical functionality.</p>
