--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/Discover-the-YSE154-Foldable-Electric-Wheelchair.html">Discover the YSE154 Foldable Electric Wheelchair: Convenience Meets Affordability - Iyasocare</a>
+      <span class="date">2026-01-28</span>
+      <p class="summary">Mobility should never be a barrier to independence, and the YSE154 Foldable Electric Wheelchair makes that easier than ever. </p>
+    </li>
+    <li>
+      <a href="articles/Smart-Electric-Wheelchair-YSE150-Comfort-Innovation-and-Style.html">Smart Electric Wheelchair YSE150 Comfort Innovation and Style - Iyasocare</a>
+      <span class="date">2026-01-28</span>
+      <p class="summary">Mobility meets innovation with the Smart Electric Wheelchair YSE150, designed to bring freedom, comfort, and elegance to daily life.</p>
+    </li>
+    <li>
       <a href="articles/Electric-Reclining-Wheelchair-YSE148.html">Electric Reclining Wheelchair YSE148 - Iyasocare</a>
       <span class="date">2026-01-23</span>
       <p class="summary">he YSE148 Electric Reclining Wheelchair is designed with both comfort and practicality in mind, offering a wide range of features that make life easier, whether you're at home or on the go.</p>
