--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/YSE128-Outdoor-Folding-Electric-Wheelchair.html">YSE128 Outdoor Folding Electric Wheelchair - Iyasocare</a>
+      <span class="date">2026-02-04</span>
+      <p class="summary">For many people, mobility isn’t just a daily necessity—it’s a gateway to independence and freedom. The YSE128 Outdoor Folding Electric Wheelchair is designed for those who want convenience. </p>
+    </li>
+    <li>
       <a href="articles/Discover-the-YSE154-Foldable-Electric-Wheelchair.html">Discover the YSE154 Foldable Electric Wheelchair: Convenience Meets Affordability - Iyasocare</a>
       <span class="date">2026-01-28</span>
       <p class="summary">Mobility should never be a barrier to independence, and the YSE154 Foldable Electric Wheelchair makes that easier than ever. </p>
