Add article for YSE130 Dual Motor Electric Wheelchair
Added a new article link for the YSE130 Dual Motor Electric Wheelchair with a summary and date.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/Discover-the-YSE130-Dual-Motor-Electric-Wheelchair.html">YSE130 Dual Motor Electric Wheelchair | Freedom, Comfort & Portability - Iyasocare</a>
+      <span class="date">2026-02-06</span>
+      <p class="summary">The YSE130 Dual Motor Electric Wheelchair is designed to give users freedom, comfort, and confidence wherever life takes them. Lightweight, foldable, and airline-approved, it’s perfect for home, city streets, and even travel adventures.</p>
+    </li>
+    <li>
       <a href="articles/YSE128-Outdoor-Folding-Electric-Wheelchair.html">YSE128 Outdoor Folding Electric Wheelchair - Iyasocare</a>
       <span class="date">2026-02-04</span>
       <p class="summary">For many people, mobility isn’t just a daily necessity—it’s a gateway to independence and freedom. The YSE128 Outdoor Folding Electric Wheelchair is designed for those who want convenience. </p>
