Add article for YSE131 Electric Wheelchair
Added a new article link for the YSE131 Electric Wheelchair with a summary and date.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <div class="container">
   <ul id="articles" class="article-list">
     <li>
+      <a href="articles/Regain-Your-Independence-with-the-YSE131-Electric-Wheelchair.html">Discover Freedom with the YSE131 Electric Wheelchair - Iyasocare</a>
+      <span class="date">2026-02-12</span>
+      <p class="summary">The YSE131 Electric Wheelchair is designed to make everyday life easier—whether at home, in the community, or on the go.</p>
+    </li>
+    <li>
       <a href="articles/Discover-the-YSE130-Dual-Motor-Electric-Wheelchair.html">YSE130 Dual Motor Electric Wheelchair | Freedom, Comfort & Portability - Iyasocare</a>
       <span class="date">2026-02-06</span>
       <p class="summary">The YSE130 Dual Motor Electric Wheelchair is designed to give users freedom, comfort, and confidence wherever life takes them. Lightweight, foldable, and airline-approved, it’s perfect for home, city streets, and even travel adventures.</p>
